--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
   <nav>
     <a href="index.html">Promoções</a>
-    <a href="cupom">Cupom de desconto</a>
+    <a href="cupom">Cupons</a>
     <a href="sobre">Sobre</a>
     <a href="contato">Contato</a>
   </nav>
